		-TextZone constructor has a selectable boolean, to specify whether highlighting is done, in addition to blur
		-Touch.getLastPoint() now returns a Point instead of a TuioPoint
		-TouchClient.getTouches() now returns an array, the old form is available using TouchClient.getTouchCollection()
	
	API Additions:
		-applet and client variables in Zone now protected
		-parent variable in Zone now protected
		-Touch.getCurrentPoint(), similar to getLastPoint except gets the current point
		-TextZone now has an additional constructor that specifies textSize
		-Zone now has getGlobalMatrix() which returns a PMatrix3D of the Zone's matrix relative to global co-ordinates
		-KeyboardZone now has the following additional methods: clearKeyListeners(), getZoneKeyListeners(), getKeyListeners()

	Feature Changes:
		-TextZone now selects(highlights)/unblurs when moving across the text to the right, and unselects(unhighlights)/blurs when moving across the text to the left 
		-TextZone now renders its text immediately
	Bug Fixes:
		-push/pop style for every zone draw properly (no longer inherit style from parent zones)
		-push/pop style in touch methods properly
		-Try to do proper shutdown in TouchClient
		-set Zone.parent to null in TouchClient.add() to make sure we draw the Zone at the top level unless it gets a new parent set
		-TextZone.clone()/TextZone copy constructor fixed to copy all TextZone state
		-assign(Touch) and unassign(Touch) now work properly
		-No longer warn that touchMethod is missing if touchDownImpl/touchUpImpl/touchMovedImpl exists, and also don't auto-unassignall() if these methods are used
		-Zone.add() and TouchClient.add() now updates the Zone's matrix to make sure the first draw is done with the correct matrix (prevents an incorrect frame from being rendered)
		-add()/remove() of null Zone will no longer halt the execution of the sketch, and instead just prints an error